--- a/Desafio 3/style.css
+++ b/Desafio 3/style.css
@@ -95,7 +95,6 @@ body {
     font-weight: 600;
     font-size: 32px;
     color: #121214;
-    padding-bottom: 48px;
 }
 
 .row {
@@ -121,6 +120,13 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+.search-box {
+    display: none;
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
